--- a/src/main/resources/view/gui/LoginMenuGui.fxml
+++ b/src/main/resources/view/gui/LoginMenuGui.fxml
@@ -1,26 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
+<?import java.net.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.shape.*?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.text.Font?>
-<BorderPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="view.gui.LoginMenuGui"
-            prefHeight="720.0" prefWidth="1080.0">
+<BorderPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/11.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.LoginMenuGui">
+
+    <stylesheets>
+        <URL value="@styles/LoginMenuGui.css"/>
+    </stylesheets>
+
 
     <top>
         <HBox alignment="CENTER">
-            <Label alignment="CENTER" text="YU-GI-OH!" textAlignment="CENTER" textFill="#000000">
-                <font>
-                    <Font name="Arial Bold" size="18.0"/>
-                </font>
-            </Label>
+            <Rectangle fx:id="yugiohRect"/>
             <padding>
                 <Insets bottom="20.0" top="20.0"/>
             </padding>
@@ -75,7 +74,11 @@
                         <Cursor fx:constant="HAND"/>
                     </cursor>
                     <effect>
-                        <DropShadow/>
+                        <DropShadow>
+                            <color>
+                                <Color red="1.0" green="1.0" blue="1.0" opacity="0.15"/>
+                            </color>
+                        </DropShadow>
                     </effect>
                     <HBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
@@ -120,7 +123,11 @@
                         <Cursor fx:constant="HAND"/>
                     </cursor>
                     <effect>
-                        <DropShadow/>
+                        <DropShadow>
+                            <color>
+                                <Color red="1.0" green="1.0" blue="1.0" opacity="0.15"/>
+                            </color>
+                        </DropShadow>
                     </effect>
                     <HBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
@@ -132,13 +139,17 @@
             </HBox>
 
             <HBox alignment="CENTER">
-                <Button fx:id="exitButton" alignment="CENTER" onMouseClicked="#exit" prefHeight="26.0"
-                        prefWidth="80.0" text="Exit">
+                <Button fx:id="exitButton" alignment="CENTER" onMouseClicked="#exit" prefHeight="26.0" prefWidth="80.0"
+                        text="Exit">
                     <cursor>
                         <Cursor fx:constant="HAND"/>
                     </cursor>
                     <effect>
-                        <DropShadow/>
+                        <DropShadow>
+                            <color>
+                                <Color red="1.0" green="1.0" blue="1.0" opacity="0.15"/>
+                            </color>
+                        </DropShadow>
                     </effect>
                     <HBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
