--- a/src/main/resources/view/gui/ScoreBoardMenu.fxml
+++ b/src/main/resources/view/gui/ScoreBoardMenu.fxml
@@ -6,30 +6,32 @@
 <?import javafx.scene.text.*?>
 
 
-<BorderPane fx:id="borderpane" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.ScoreBoardMenuGui">
-   <bottom>
-      <VBox alignment="CENTER" prefHeight="66.0" prefWidth="1080.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" text="back" onMouseClicked="#backToMainMenu">
-               <effect>
-                  <DropShadow />
-               </effect>
-            </Button>
-         </children>
-      </VBox>
-   </bottom>
-   <center>
-      <GridPane fx:id="scoreboard"/>
-   </center>
-   <top>
-      <VBox alignment="CENTER" prefHeight="77.0" prefWidth="1080.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label text="YU-GI-OH!">
-               <font>
-                  <Font name="Arial Bold" size="18.0" />
-               </font>
-            </Label>
-         </children>
-      </VBox>
-   </top>
+<BorderPane fx:id="borderpane" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/11.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.ScoreBoardMenuGui">
+    <bottom>
+        <VBox alignment="CENTER" prefHeight="66.0" prefWidth="1080.0" BorderPane.alignment="CENTER">
+            <children>
+                <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" text="back"
+                        onMouseClicked="#backToMainMenu">
+                    <effect>
+                        <DropShadow/>
+                    </effect>
+                </Button>
+            </children>
+        </VBox>
+    </bottom>
+    <center>
+        <GridPane fx:id="scoreboard"/>
+    </center>
+    <top>
+        <VBox alignment="CENTER" prefHeight="77.0" prefWidth="1080.0" BorderPane.alignment="CENTER">
+            <children>
+                <Label text="YU-GI-OH!">
+                    <font>
+                        <Font name="Arial Bold" size="18.0"/>
+                    </font>
+                </Label>
+            </children>
+        </VBox>
+    </top>
 </BorderPane>
