--- a/src/main/resources/view/gui/ShopMenuGui.fxml
+++ b/src/main/resources/view/gui/ShopMenuGui.fxml
@@ -6,19 +6,20 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
+<BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="view.gui.ShopMenuGui"
             prefHeight="720.0" prefWidth="1080.0">
 
-    <BorderPane>
+
         <center>
             <GridPane fx:id="gridPane"/>
         </center>
 
         <bottom>
-            <Button text="back" onMouseClicked="#backToMainMenu"/>
+            <VBox alignment="CENTER" spacing="5">
+                <Button text="back" onMouseClicked="#backToMainMenu"/>
+            </VBox>
         </bottom>
-    </BorderPane>
 
-</AnchorPane>
+</BorderPane>
