--- a/src/main/resources/view/gui/ShopMenuGui.fxml
+++ b/src/main/resources/view/gui/ShopMenuGui.fxml
@@ -1,25 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="view.gui.ShopMenuGui"
-            prefHeight="720.0" prefWidth="1080.0">
+<AnchorPane prefHeight="746.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/11.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.ShopMenuGui">
 
 
-        <center>
-            <GridPane fx:id="gridPane"/>
-        </center>
+    <GridPane fx:id="gridPane" alignment="CENTER" hgap="10.0" vgap="10.0"/>
 
-        <bottom>
-            <VBox alignment="CENTER" spacing="5">
-                <Button text="back" onMouseClicked="#backToMainMenu"/>
-            </VBox>
-        </bottom>
 
-</BorderPane>
+    <Button onMouseClicked="#backToMainMenu" prefHeight="26.0" prefWidth="100.0" text="back" layoutX="950"/>
+
+
+</AnchorPane>
