--- a/src/main/resources/view/gui/ShopMenuGui.fxml
+++ b/src/main/resources/view/gui/ShopMenuGui.fxml
@@ -3,14 +3,16 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="746.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/11.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.ShopMenuGui">
+<?import javafx.scene.text.Text?>
+<AnchorPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/11.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.ShopMenuGui" style="-fx-background-color: black">
 
 
-    <GridPane fx:id="gridPane" alignment="CENTER" hgap="10.0" vgap="10.0"/>
+    <GridPane fx:id="gridPane" alignment="CENTER" hgap="10.0" vgap="5.0"/>
 
 
-    <Button onMouseClicked="#backToMainMenu" prefHeight="26.0" prefWidth="100.0" text="back" layoutX="950"/>
+
+    <Button onMouseClicked="#backToMainMenu" prefHeight="26.0" prefWidth="100.0" text="back" layoutX="1225" layoutY="20"/>
 
 
 </AnchorPane>
