change method in GetImage

--- a/src/main/resources/view/gui/DuelMenuGui.fxml
+++ b/src/main/resources/view/gui/DuelMenuGui.fxml
@@ -1,20 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
+<?import java.net.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
+<BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="view.gui.DuelMenuGui"
-            prefHeight="400.0" prefWidth="600.0">
+            prefHeight="600.0" prefWidth="880.0">
+
+    <stylesheets>
+        <URL value="@styles/DuelMenuGui.css"/>
+    </stylesheets>
+
+    <center>
+        <Pane fx:id="fieldPane" prefWidth="570" prefHeight="600">
+        </Pane>
+    </center>
+
+    <left>
+        <BorderPane prefWidth="210" prefHeight="600">
+            <top>
+                <!--            opponent lp-->
+            </top>
+            <center>
+                <!--            card stats-->
+            </center>
+            <bottom>
+                <!--            player lp-->
+            </bottom>
+        </BorderPane>
+    </left>
+
+    <right>
+<!--        chatBox-->
+    </right>
 
 
-    <Pane fx:id="fieldPane" prefWidth="570" prefHeight="600">
-    </Pane>
-
-
-
-</AnchorPane>
+</BorderPane>
