--- a/src/main/resources/view/gui/DuelMenuGui.fxml
+++ b/src/main/resources/view/gui/DuelMenuGui.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import javafx.scene.shape.Rectangle?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="view.gui.DuelMenuGui"
@@ -24,18 +25,27 @@
         <BorderPane prefWidth="210" prefHeight="600">
             <top>
                 <!--            opponent lp-->
+                <Rectangle width="210" height="50"/>
             </top>
             <center>
-                <!--            card stats-->
+                <VBox alignment="CENTER">
+                    <HBox alignment="CENTER">
+                        <Rectangle fx:id="selectedCard" width="210" height="307"/>
+                    </HBox>
+                    <HBox alignment="CENTER">
+                        <Label fx:id="selectedCardDescription" prefWidth="210" prefHeight="193"/>
+                    </HBox>
+                </VBox>
             </center>
             <bottom>
                 <!--            player lp-->
+                <Rectangle width="210" height="50"/>
             </bottom>
         </BorderPane>
     </left>
 
     <right>
-<!--        chatBox-->
+        <!--        chatBox-->
     </right>
 
 
