--- a/src/main/resources/view/gui/DuelMenuGui.fxml
+++ b/src/main/resources/view/gui/DuelMenuGui.fxml
@@ -1,45 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 
-<?import javafx.scene.shape.Rectangle?>
-<BorderPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="view.gui.DuelMenuGui"
-            prefHeight="600.0" prefWidth="880.0">
+<BorderPane prefHeight="600.0" prefWidth="880.0" xmlns="http://javafx.com/javafx/11.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.DuelMenuGui">
 
     <stylesheets>
         <URL value="@styles/DuelMenuGui.css"/>
     </stylesheets>
 
     <center>
-        <Pane fx:id="fieldPane" prefWidth="570" prefHeight="600">
+        <Pane fx:id="fieldPane" prefHeight="600" prefWidth="570">
         </Pane>
     </center>
 
     <left>
-        <BorderPane prefWidth="210" prefHeight="600">
+        <BorderPane prefHeight="600" prefWidth="210">
             <top>
                 <!--            opponent lp-->
-                <Rectangle width="210" height="50"/>
+                <Rectangle height="50" width="210"/>
             </top>
             <center>
                 <VBox alignment="CENTER">
                     <HBox alignment="CENTER">
-                        <Rectangle fx:id="selectedCard" width="210" height="307"/>
+                        <Rectangle fx:id="selectedCard" height="307" width="210"/>
                     </HBox>
                     <HBox alignment="CENTER">
-                        <Label fx:id="selectedCardDescription" prefWidth="210" prefHeight="193"/>
+                        <Label fx:id="selectedCardDescription" alignment="TOP_LEFT" prefHeight="193" prefWidth="210"
+                               textAlignment="JUSTIFY" wrapText="true">
+                            <padding>
+                                <Insets bottom="5.0" left="10.0" right="10.0" top="5.0"/>
+                            </padding>
+                        </Label>
                     </HBox>
                 </VBox>
             </center>
             <bottom>
                 <!--            player lp-->
-                <Rectangle width="210" height="50"/>
+                <Rectangle height="50" width="210"/>
             </bottom>
         </BorderPane>
     </left>
