--- a/src/main/resources/view/gui/MainMenuGui.fxml
+++ b/src/main/resources/view/gui/MainMenuGui.fxml
@@ -22,6 +22,17 @@
     <center>
         <VBox alignment="CENTER" spacing="20.0" BorderPane.alignment="CENTER">
             <children>
+                <Button mnemonicParsing="false" prefWidth="100" prefHeight="26" text="Card Creator"
+                        onMouseClicked="#startCartCreatorMenu">
+                    <effect>
+                        <DropShadow spread="0.5">
+                            <color>
+                                <Color red="0.46237864762394" blue="0.8723467892364" green="0.023486264242349"/>
+                            </color>
+                        </DropShadow>
+                    </effect>
+
+                </Button>
                 <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" text="Duel"
                         onMouseClicked="#startDuel">
                     <effect>
