--- a/src/main/resources/view/gui/CardCreatorMenuGui.fxml
+++ b/src/main/resources/view/gui/CardCreatorMenuGui.fxml
@@ -11,9 +11,8 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="720" prefWidth="1080" style="-fx-background-color: black;"
-            xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="view.gui.CardCreatorMenuGui">
+<AnchorPane prefHeight="720" prefWidth="1080" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/16"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.CardCreatorMenuGui">
     <children>
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#5e0101" height="283.0" layoutX="66.0" layoutY="65.0"
                    stroke="BLACK" strokeType="INSIDE" width="264.0"/>
@@ -79,10 +78,18 @@
                   text="Twin Twisters Effect"/>
         <CheckBox fx:id="UnitedWeStands" layoutX="702.0" layoutY="504.0" mnemonicParsing="false"
                   text="United We Stands"/>
-        <Button layoutX="676.0" layoutY="181.0" mnemonicParsing="false" onAction="#createCard" prefHeight="145.0"
+        <Button layoutX="676.0" layoutY="181.0" mnemonicParsing="false" onMouseClicked="#createCard" prefHeight="145.0"
                 prefWidth="270.0" style="-fx-background-color: darkred;" text="Click Here To Create This Card"
                 textFill="WHITE"/>
         <Text fx:id="Price" layoutX="537.0" layoutY="176.0" strokeType="OUTSIDE" strokeWidth="0.0"/>
         <ChoiceBox fx:id="chooseType" layoutX="458.0" layoutY="338.0" prefHeight="26.0" prefWidth="143.0"/>
+        <TextField fx:id="Attack" layoutX="686.0" layoutY="565.0"/>
+        <TextField fx:id="Defense" layoutX="871.0" layoutY="565.0"/>
+        <Text layoutX="743.0" layoutY="560.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Attack"/>
+        <Text layoutX="935.0" layoutY="560.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Defense"/>
+        <Text layoutX="612.0" layoutY="613.0" strokeType="OUTSIDE" strokeWidth="0.0"
+              text="Pay attention: you have to input number and this option just for monsters card"/>
+        <Button layoutX="28.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#back"
+                style="-fx-background-color: darkred;" text="Back"/>
     </children>
 </AnchorPane>
