--- a/src/main/resources/view/gui/ScoreBoardMenu.fxml
+++ b/src/main/resources/view/gui/ScoreBoardMenu.fxml
@@ -9,10 +9,10 @@
 <BorderPane fx:id="borderpane" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/11.0.1"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.ScoreBoardMenuGui">
     <bottom>
-        <VBox alignment="CENTER" prefHeight="66.0" prefWidth="1080.0" BorderPane.alignment="CENTER">
+        <VBox alignment="CENTER" prefHeight="66.0" prefWidth="1080.0" BorderPane.alignment="CENTER" style="-fx-background-color: black">
             <children>
                 <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" text="back"
-                        onMouseClicked="#backToMainMenu">
+                        onMouseClicked="#backToMainMenu" style="-fx-background-color: red; -fx-text-fill: white;">
                     <effect>
                         <DropShadow/>
                     </effect>
@@ -21,12 +21,12 @@
         </VBox>
     </bottom>
     <center>
-        <GridPane fx:id="scoreboard"/>
+        <GridPane fx:id="scoreboard" style="-fx-background-color: black"/>
     </center>
     <top>
-        <VBox alignment="CENTER" prefHeight="77.0" prefWidth="1080.0" BorderPane.alignment="CENTER">
+        <VBox alignment="CENTER" prefHeight="77.0" prefWidth="1080.0" BorderPane.alignment="CENTER" style="-fx-background-color: black">
             <children>
-                <Label text="YU-GI-OH!">
+                <Label text="YU-GI-OH!" style="-fx-text-fill: white">
                     <font>
                         <Font name="Arial Bold" size="18.0"/>
                     </font>
