--- a/src/main/resources/view/gui/MainMenuGui.fxml
+++ b/src/main/resources/view/gui/MainMenuGui.fxml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/11.0.1"
+<BorderPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/16"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.MainMenuGui">
     <top>
         <VBox alignment="CENTER" prefHeight="60.0" prefWidth="1080.0" BorderPane.alignment="CENTER">
@@ -22,19 +26,24 @@
     <center>
         <VBox alignment="CENTER" spacing="20.0" BorderPane.alignment="CENTER">
             <children>
-                <Button mnemonicParsing="false" prefWidth="100" prefHeight="26" text="Card Creator"
-                        onMouseClicked="#startCartCreatorMenu">
+                <ImageView fitHeight="66.0" fitWidth="200.0">
+                    <image>
+                        <Image url="@Assets/Project-Assets-1.0.0/Assets/Logos/GUI_T_GateLogo_s001.dds.png"/>
+                    </image>
+                </ImageView>
+                <Button mnemonicParsing="false" onMouseClicked="#startCartCreatorMenu" prefHeight="26" prefWidth="100"
+                        text="Card Creator">
                     <effect>
                         <DropShadow spread="0.5">
                             <color>
-                                <Color red="0.46237864762394" blue="0.8723467892364" green="0.023486264242349"/>
+                                <Color red="0.46237864762394" green="0.023486264242349" blue="0.8723467892364"/>
                             </color>
                         </DropShadow>
                     </effect>
 
                 </Button>
-                <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" text="Duel"
-                        onMouseClicked="#startDuel">
+                <Button mnemonicParsing="false" onMouseClicked="#startDuel" prefHeight="26.0" prefWidth="100.0"
+                        text="Duel">
                     <effect>
                         <DropShadow spread="0.5">
                             <color>
@@ -43,8 +52,8 @@
                         </DropShadow>
                     </effect>
                 </Button>
-                <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" text="Deck"
-                        onMouseClicked="#startDeckMenu">
+                <Button mnemonicParsing="false" onMouseClicked="#startDeckMenu" prefHeight="26.0" prefWidth="100.0"
+                        text="Deck">
                     <effect>
                         <DropShadow spread="0.5">
                             <color>
@@ -53,8 +62,8 @@
                         </DropShadow>
                     </effect>
                 </Button>
-                <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" text="ScoreBoard"
-                        onMouseClicked="#startScoreBoardMenu">
+                <Button mnemonicParsing="false" onMouseClicked="#startScoreBoardMenu" prefHeight="26.0"
+                        prefWidth="100.0" text="ScoreBoard">
                     <effect>
                         <DropShadow spread="0.5">
                             <color>
@@ -63,8 +72,8 @@
                         </DropShadow>
                     </effect>
                 </Button>
-                <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" text="Profile"
-                        onMouseClicked="#startProfileMenu">
+                <Button mnemonicParsing="false" onMouseClicked="#startProfileMenu" prefHeight="26.0" prefWidth="100.0"
+                        text="Profile">
                     <effect>
                         <DropShadow spread="0.5">
                             <color>
@@ -73,8 +82,8 @@
                         </DropShadow>
                     </effect>
                 </Button>
-                <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" text="Shop"
-                        onMouseClicked="#startShopMenu">
+                <Button mnemonicParsing="false" onMouseClicked="#startShopMenu" prefHeight="26.0" prefWidth="100.0"
+                        text="Shop">
                     <effect>
                         <DropShadow spread="0.5">
                             <color>
@@ -83,14 +92,14 @@
                         </DropShadow>
                     </effect>
                 </Button>
-                <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" text="Import/Export"
-                        onMouseClicked="#startImportExportMenu">
+                <Button mnemonicParsing="false" onMouseClicked="#startImportExportMenu" prefHeight="26.0"
+                        prefWidth="100.0" text="Import/Export">
                     <effect>
                         <DropShadow spread="0.5"/>
                     </effect>
                 </Button>
-                <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" text="Log out"
-                        onMouseClicked="#logout">
+                <Button mnemonicParsing="false" onMouseClicked="#logout" prefHeight="26.0" prefWidth="100.0"
+                        text="Log out">
                     <effect>
                         <DropShadow spread="0.5">
                             <color>
