--- a/src/main/resources/view/gui/styles/ShowGameMessage.css
+++ b/src/main/resources/view/gui/styles/ShowGameMessage.css
@@ -1,6 +1,6 @@
 .root {
     -fx-font-family: Arial;
-    -fx-background-color: #93a1a7;
+    -fx-background-color: #eee0b1;
 }
 
 .label {
@@ -13,8 +13,4 @@
 .button {
     -fx-background-color: #dd0202;
     -fx-text-fill: white;
-}
-
-#buttonPane {
-    -fx-background-color: #141414;
 }
