--- a/src/main/resources/view/gui/DeckMenuGui.fxml
+++ b/src/main/resources/view/gui/DeckMenuGui.fxml
@@ -8,25 +8,36 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #404040;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.DeckMenuGui">
+<AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #404040;"
+            xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="view.gui.DeckMenuGui">
     <children>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" height="97.0" layoutY="621.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="550.0" layoutX="214.0" layoutY="3.0" stroke="BLACK" strokeType="INSIDE" width="582.0" />
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#35661d" height="145.0" layoutX="214.0" layoutY="554.0" stroke="BLACK" strokeType="INSIDE" width="582.0" />
+        <Rectangle arcHeight="5.0" arcWidth="5.0" height="97.0" layoutY="621.0" stroke="BLACK" strokeType="INSIDE"
+                   width="200.0"/>
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="550.0" layoutX="214.0" layoutY="3.0"
+                   stroke="BLACK" strokeType="INSIDE" width="582.0"/>
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#35661d" height="145.0" layoutX="214.0" layoutY="554.0"
+                   stroke="BLACK" strokeType="INSIDE" width="582.0"/>
         <ImageView fitHeight="560.0" fitWidth="652.0" layoutX="200.0" layoutY="3.0">
             <image>
-                <Image url="@elements/Deck/DeckPic.JPG" />
+                <Image url="@elements/Deck/DeckPic.JPG"/>
             </image>
         </ImageView>
         <ImageView fitHeight="157.0" fitWidth="652.0" layoutX="200.0" layoutY="559.0">
             <image>
-                <Image url="@elements/Deck/SideDeck.JPG" />
+                <Image url="@elements/Deck/SideDeck.JPG"/>
             </image>
         </ImageView>
-        <Button layoutX="73.0" layoutY="654.0" mnemonicParsing="false" onMouseClicked="#back" style="-fx-background-color: red;" text="Back" textFill="WHITE" />
-        <ListView layoutX="852.0" layoutY="3.0" prefHeight="715.0" prefWidth="228.0" />
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#0084ff" height="307.0" layoutY="82.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffa2" height="231.0" layoutY="389.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
-        <Label layoutX="22.0" layoutY="415.0" prefHeight="170.0" prefWidth="146.0" textAlignment="JUSTIFY" wrapText="true" />
+        <Button layoutX="73.0" layoutY="654.0" mnemonicParsing="false" onMouseClicked="#back"
+                style="-fx-background-color: red;" text="Back" textFill="WHITE"/>
+        <ListView layoutX="852.0" layoutY="3.0" prefHeight="715.0" prefWidth="228.0"/>
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#0084ff" height="307.0" layoutY="82.0" stroke="BLACK"
+                   strokeType="INSIDE" width="200.0"/>
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffa2" height="231.0" layoutY="389.0" stroke="BLACK"
+                   strokeType="INSIDE" width="200.0"/>
+        <Label layoutX="22.0" layoutY="415.0" prefHeight="170.0" prefWidth="146.0" textAlignment="JUSTIFY"
+               wrapText="true"/>
+        <Button layoutX="55.0" layoutY="26.0" mnemonicParsing="false" onMouseClicked="#deleteCurrentDeck"
+                style="-fx-background-color: red;" text="deleteDeck" textFill="WHITE"/>
     </children>
 </AnchorPane>
