hand fixed and graveyard added

--- a/src/main/resources/view/gui/DuelMenuGui.fxml
+++ b/src/main/resources/view/gui/DuelMenuGui.fxml
@@ -162,6 +162,24 @@
                         </HBox>
                         <HBox>
                             <Button alignment="CENTER" prefHeight="26.0"
+                                    prefWidth="110.0" text="show graveyard" onMouseClicked="#showGraveyard">
+                                <cursor>
+                                    <Cursor fx:constant="HAND"/>
+                                </cursor>
+                                <effect>
+                                    <DropShadow>
+                                        <color>
+                                            <Color red="1.0" green="1.0" blue="1.0" opacity="0.15"/>
+                                        </color>
+                                    </DropShadow>
+                                </effect>
+                                <HBox.margin>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                                </HBox.margin>
+                            </Button>
+                        </HBox>
+                        <HBox>
+                            <Button alignment="CENTER" prefHeight="26.0"
                                     prefWidth="110.0" text="Surrender" onMouseClicked="#surrender">
                                 <cursor>
                                     <Cursor fx:constant="HAND"/>
