--- a/src/main/resources/view/gui/DeckMenuGui.fxml
+++ b/src/main/resources/view/gui/DeckMenuGui.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #404040;"
             xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
@@ -37,7 +38,12 @@
                    strokeType="INSIDE" width="200.0"/>
         <Label layoutX="22.0" layoutY="415.0" prefHeight="170.0" prefWidth="146.0" textAlignment="JUSTIFY"
                wrapText="true"/>
-        <Button layoutX="55.0" layoutY="26.0" mnemonicParsing="false" onMouseClicked="#deleteCurrentDeck"
-                style="-fx-background-color: red;" text="deleteDeck" textFill="WHITE"/>
+        <Button layoutX="1.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#deleteCurrentDeck"
+                prefHeight="38.0" prefWidth="200.0" style="-fx-background-color: red;" text="deleteDeck"
+                textFill="WHITE"/>
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fdfeff" height="45.0" layoutY="40.0" stroke="BLACK"
+                   strokeType="INSIDE" width="200.0"/>
+        <Text layoutX="20.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Number Of Cards: "/>
+        <Text layoutX="127.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0"/>
     </children>
 </AnchorPane>
